# Talk_to_Philosophers

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
data/: philosophers.json
internals/: __init__.py  chat.py  chat_completer.py  system.py  user.py
prompts/: prompt_template.yaml
src/: __init__.py  chat_completer.py  main.py  philosopher.py  philosopher_chat.py  system.py
src/internals/: chat.py  chat_completer.py  philosopher.py  system.py  user.py
src/philosopher_chat/utils/: globals.py
src/prompts/: prompt_template.yaml
src/talk_to_philosophers/: main.py
src/talk_to_philosophers/internals/: chat.py  chat_completer.py  chat_items.py  prompt_loader.py  system.py  user.py
src/talk_to_philosophers/prompts/: prompt_template.yaml
src/talk_to_philosophers/utils/: __init__.py
src/utils/: __init__.py  chat_completer.py  globals.py
