[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "philosopher-chat"
version = "0.1.0"
authors = [{ name = "ErfanMoosavi", email = "erfanmoosavi84@gmail.com" }]
description = "Chat with philosophers!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "openai==1.97.1",
  "PyYAML>=6.0",
  "python-dotenv">=1.0.0
]

[tool.setuptools.packages.find]
where = ["src"]
